# sniffer-zero

./: .gitignore  LICENSE-NOTE.md  README.md  deploy_to_pi.sh  deploy_to_raspberry_pi.sh  evil_twin_working.py  phase1-rapport.md  phase2-rapport.md  phase3-rapport.md  phase4-rapport.md  phase5-rapport.md  phase6-rapport.md  pyproject.toml  run_all_tests.py  run_all_tests.sh
authorization/: authorization.yaml
config/: hardware.yaml
defense-rogue-ap-detector/: rogue_ap_detector.py
deploy/: setup.sh
docs/: 00-PRESENTATION.md  01-INSTALLATION.md  02-ARCHITECTURE.md  03-MODULES.md  04-CARTOGRAPHIE.md  05-SPECTRE-HACKRF.md  06-SCENARIOS.md  07-WEB-PLATFORM.md  08-FAQ-SOUTENANCE.md  DEPLOYMENT.md  HARDWARE-SETUP.md  INDEX.md  INSTALLATION.md  TESTING.md  TROUBLESHOOTING.md  architecture.md  hardware-bom.md  lab-setup.md  legal-scope.md  roadmap.md
flowgraphs/: fm_receiver.grc  record_replay.grc  spectrum_survey.grc
infra/: README.md  docker-compose.yml
intel-mac-dehide/: mac_dehide.py
post-bettercap-mitm/: bettercap_mitm.py
post-ntlm-relay/: ntlm_relay.py
post-responder/: responder_capture.py
safety/: whitelist.yaml
scenarios/: autonomous_patrol.yaml  ble_deep_audit.yaml  ble_full_audit.yaml  cartographie_complete.yaml  continuous_monitor.yaml  full_deep_audit.yaml  full_demo_jury.yaml  lora_abp_replay_demo.yaml  lora_deep_audit.yaml  lora_otaa_join_replay.yaml  recon_ble_complete.yaml  recon_multi_protocol.yaml  recon_wifi_complete.yaml  survey_spectral.yaml  wifi_deep_audit.yaml  wifi_full_audit.yaml
scripts/: battery_monitor.sh  export.sh  generate_mitre_matrix.py  install_arsenal.sh  smoke_test.py  watchdog.sh
templates/: mitre_layer.json.j2  report.css  report.html
tests/: conftest.py  test_all_modules_dryrun.py  test_analysis_run.py  test_anomaly_detector.py  test_cli.py  test_db.py  test_frame_dissector.py  test_frame_parser.py  test_module.py  test_orchestrator.py  test_pdf_report.py  test_probe_fingerprinter.py  test_registry.py  test_reporter.py  test_safety.py  test_security_assessor.py  test_spectrum_sweep.py  test_web_api.py  test_web_integration.py  test_web_ws.py
wifi-beacon-flood/: beacon_flood.py
wifi-deauth/: deauth.py
wifi-dragonblood/: dragonblood.py
wifi-eap-relay/: eap_relay.py
wifi-fragattack/: fragattack.py
wifi-karma/: karma.py
wifi-krack/: krack.py
wifi-macstealer/: macstealer.py
wifi-mdk4-dos/: mdk4_dos.py
wifi-pmkid/: pmkid.py
wifi-psk-crack/: handshake_crack.py
wifi-recon/: recon.py
wifi-security-assessor/: security_assessor.py
wifi-wps-pixie/: wps_pixie.py
zero-day-airsnitch/: airsnitch.py
zero-day-cve-2024-30078/: cve_2024_30078.py
(+154 files in other folders)
