[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srt"
version = "0.1.0"
description = "sniffer-rt: ISM RF red-team platform (lab-only, authorized use)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary - authorized lab use only" }
authors = [
    { name = "sniffer-rt team" }
]
dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "pyyaml>=6.0",
    "pydantic>=2.6",
    "scapy>=2.5",
    "psycopg[binary]>=3.1",
    "paho-mqtt>=2.0",
    "structlog>=24.1",
    "jinja2>=3.1",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
]
ble = [
    "bleak>=0.21",
]
report = [
    "weasyprint>=62",
    "matplotlib>=3.8",
]
crypto = [
    "pycryptodome>=3.19",
]

[project.scripts]
srt = "srt.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"src/srt/exploit/**" = ["S104", "S108", "S110", "S305", "S603", "S607"]
"src/srt/gnuradio/**" = ["S108", "S603", "S607"]
"src/srt/core/gps.py" = ["S110"]
"src/srt/core/hardware.py" = ["S603"]
"src/srt/core/sdr.py" = ["S603"]
"src/srt/recon/**" = ["S110", "S603", "S607"]
"src/srt/analysis/lora/key_extractor.py" = ["S305"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

# Coverage targets core+analysis modules only (81%+ goal). Exploit, recon, and
# gnuradio modules are excluded because they require physical RF hardware
# (HackRF, ALFA adapters, BLE dongles) to test meaningfully.
[tool.coverage.run]
source = ["srt"]
omit = [
    "src/srt/gnuradio/*",
    "src/srt/exploit/*",
    "src/srt/recon/ble/*",
    "src/srt/recon/wifi/*",
    "src/srt/recon/lora/recon.py",
    "src/srt/analysis/ble/*",
    "src/srt/analysis/lora/frame_decoder.py",
    "src/srt/analysis/lora/key_extractor.py",
    "src/srt/analysis/lora/traffic_profiler.py",
    "src/srt/analysis/wifi/signal_analyzer.py",
    "src/srt/analysis/wifi/timing_analyzer.py",
    "src/srt/core/gps.py",
    "src/srt/core/hardware.py",
    "src/srt/core/mqtt_worker.py",
    "src/srt/core/correlation.py",
    "src/srt/core/mitre.py",
    "src/srt/core/sdr.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]
